Finalización del proyecto, solución de bugs

--- a/src/Album.css
+++ b/src/Album.css
@@ -52,6 +52,11 @@ html body {
   background-color: #f8f9fa;
   border: 1px solid; /* Establece un borde sólido */
   box-shadow: 0 0 10px #f8f9fa;
+  transition: transform 0.3s ease;
+}
+.container:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 0 20px #fca311;
 }
 .container img {
   width: 250px;
